# semanticmemo

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES.md  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml
benchmarks/: classifier_vs_cosine.py  cosine_baseline_customer_support.py  false_positive_eval.py  prompt_mutation_benchmark.py  run_benchmarks.py  semantic_drift_benchmark.py  sweep_thresholds.py
benchmarks/data/: customer_support.jsonl  finance.jsonl  hard_negatives.jsonl  high_stakes_pairs.jsonl  medical.jsonl  security.jsonl
benchmarks/results/: classifier_vs_cosine.json  comparison_matrix.json  false_positive_eval.json  mutation_benchmark.json  semantic_drift_benchmark.json  threshold_report.md
data/: README.md
data/corpus/: action_templates.jsonl  base_prompts.jsonl
data/fixtures/: customer_support_pairs.jsonl
data/training/: manifest.json  pairs_v2.train.jsonl  pairs_v2.validation.jsonl
docs/: API.md  architecture.md  benchmark_methodology.md  decision_engine.md  deployment.md  feedback.md  limitations.md  quickstart.md  results.md  why-semanticmemo.md
docs/adr/: adr-001-why-mlp-classifier.md  adr-002-why-cross-encoder-verification.md  adr-003-why-domain-conditioned-risk-policies.md
docs/ml/: evaluation.md  how-the-classifier-works.md  training-your-own.md
examples/: basic_usage.py  bundled_classifier.py  train_custom_classifier.py  with_agenteval.py  with_guardloop.py  with_orchflow.py
scripts/: generate_training_data.py  train_classifier.py
src/equivcache/: __init__.py  cache.py  cli.py  exceptions.py  models.py  orchestrator.py  types.py
src/equivcache/classifier/: __init__.py  data.py  evaluate.py  service.py  train.py
src/equivcache/embedding/: __init__.py  service.py
src/equivcache/store/: __init__.py  schema.sql  sqlite_store.py
src/semanticmemo/: __init__.py  _logging.py  cache.py  cli.py  domain_detector.py  entity_change_detection.py  exceptions.py  metrics.py  models.py  orchestrator.py  resources.py  types.py
src/semanticmemo/_models/: equivalence-net-v1.pt  equivalence-net-v1.report.json
src/semanticmemo/classifier/: __init__.py  cross_encoder_service.py  data.py  evaluate.py  model.py  service.py  train.py
src/semanticmemo/embedding/: __init__.py  service.py
src/semanticmemo/feedback/: __init__.py  retrain.py
src/semanticmemo/store/: __init__.py  schema.sql  sqlite_store.py
src/smartmemo/: __init__.py  _logging.py  cache.py  exceptions.py  models.py  orchestrator.py  resources.py
src/smartmemo/_models/: classifier-v2.report.json
src/smartmemo/classifier/: service.py
src/smartmemo/feedback/: retrain.py
src/smartmemo/store/: schema.sql  sqlite_store.py
tests/: conftest.py  test_bundled_classifier.py  test_cache.py  test_classifier_data.py  test_classifier_evaluate.py  test_classifier_model.py  test_classifier_service.py  test_classifier_train.py  test_cli.py  test_context_manager.py  test_decision_engine.py  test_embedding.py  test_entity_change_detection.py  test_feedback_retrain.py  test_implicit_feedback.py  test_logging.py  test_models.py  test_public_api.py  test_retry.py  test_store.py  test_store_concurrency.py
