[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "smartmemo"
version = "0.2.0"
description = "Semantic memory for LLM agent calls with an equivalence-first cache architecture."
readme = "README.md"
requires-python = ">=3.11,<3.15"
license = "MIT"
authors = [
  { name = "Abhinandan" }
]
keywords = ["llm", "agents", "semantic-cache", "semantic-memory", "embeddings", "equivalence"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "numpy>=1.26,<3",
  "pydantic>=2.7,<3",
]

[project.optional-dependencies]
ml = [
  "faiss-cpu>=1.8,<2",
  "sentence-transformers>=3,<6",
  "torch>=2.3,<3",
]
llm = [
  "anthropic>=0.60,<1",
  "openai>=1.70,<3",
]
dev = [
  "pytest>=8,<10",
  "pytest-asyncio>=0.24,<2",
  "pyright>=1.1.400,<2",
  "ruff>=0.9,<1",
]

[project.urls]
Repository = "https://github.com/awesome-pro/smartmemo"
Issues = "https://github.com/awesome-pro/smartmemo/issues"
Changelog = "https://github.com/awesome-pro/smartmemo/blob/main/CHANGELOG.md"

[project.scripts]
smartmemo = "smartmemo.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/smartmemo"]

[tool.hatch.build.targets.wheel.force-include]
"src/smartmemo/store/schema.sql" = "smartmemo/store/schema.sql"
"src/smartmemo/_models/classifier-v2.pt" = "smartmemo/_models/classifier-v2.pt"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingTypeStubs = false
