[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "semanticmemo"
version = "1.2.0"
description = "Production-grade semantic caching for LLM agents — a learned equivalence classifier replaces the naive cosine threshold that causes false-positive failures."
readme = "README.md"
requires-python = ">=3.11,<3.15"
license = "MIT"
authors = [
  { name = "Rajveer Singh Saggu" }
]
keywords = [
  "llm",
  "agents",
  "semantic-cache",
  "semantic-memory",
  "embeddings",
  "equivalence",
  "cross-encoder",
  "mlp-classifier",
  "false-positive-reduction",
  "risk-aware",
  "faiss",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=1.26,<3",
  "pydantic>=2.7,<3",
]

[project.optional-dependencies]
ml = [
  "faiss-cpu>=1.8,<2",
  "sentence-transformers>=3,<6",
  "torch>=2.3,<3",
]
llm = [
  "anthropic>=0.60,<1",
  "openai>=1.70,<3",
]
dev = [
  "pytest>=8,<10",
  "pytest-asyncio>=0.24,<2",
  "pyright>=1.1.400,<2",
  "ruff>=0.9,<1",
]

[project.urls]
Homepage = "https://github.com/rajveer100704/semanticmemo"
Repository = "https://github.com/rajveer100704/semanticmemo"
Issues = "https://github.com/rajveer100704/semanticmemo/issues"
Changelog = "https://github.com/rajveer100704/semanticmemo/blob/main/CHANGELOG.md"
Documentation = "https://github.com/rajveer100704/semanticmemo/blob/main/docs/results.md"

[project.scripts]
semanticmemo = "semanticmemo.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/semanticmemo"]

[tool.hatch.build.targets.wheel.force-include]
"src/semanticmemo/store/schema.sql" = "semanticmemo/store/schema.sql"
"src/semanticmemo/_models/equivalence-net-v1.pt" = "semanticmemo/_models/equivalence-net-v1.pt"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingTypeStubs = false
